# ALADYN

./: ARCHITECTURE.md  LICENSE  README.md  pyproject.toml
_references/: README.md
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst
examples/: __init__.py
examples/results/: .gitkeep
gui/: __init__.py
gui/postprocessor/: __init__.py
gui/preprocessor/: __init__.py
src/aladyn/: __init__.py
src/aladyn/actuators/: __init__.py
src/aladyn/builder/: __init__.py  assembly.py
src/aladyn/constraints/: __init__.py  _common.py  base.py  cylindrical.py  drivers.py  functions.py  lower_pair.py  planar.py  primitive.py  prismatic.py  revolute.py  spherical.py  universal.py
src/aladyn/contact/: __init__.py
src/aladyn/control/: __init__.py
src/aladyn/core/: __init__.py  base.py  logging.py  units.py  utils.py
src/aladyn/dynamics/: __init__.py  coordinates.py  eom.py  stabilization.py
src/aladyn/forces/: __init__.py  applied.py  base.py  gravity.py  springs.py  user.py
src/aladyn/io/: __init__.py  exporters.py  serialization.py
src/aladyn/math/: __init__.py  quaternions.py  rotations.py  transforms.py  vectors.py
src/aladyn/model/: __init__.py  body.py  flex_body.py  ground.py  marker.py  shapes.py
src/aladyn/sensors/: __init__.py
src/aladyn/solver/: __init__.py  dynamics.py  integrators.py  kinematics.py  model.py  statics.py
tests/: __init__.py  _regen_refs.py  conftest.py
tests/regression/refs/: .gitkeep
tests/unit/: _joint_helpers.py  conftest.py  test_constraints_cylindrical.py  test_constraints_planar.py  test_constraints_prismatic.py  test_constraints_revolute.py  test_constraints_spherical.py  test_constraints_universal.py  test_core.py  test_dynamics_coordinates.py  test_dynamics_eom.py  test_forces.py  test_math_quaternions.py  test_math_rotations.py  test_math_transforms.py  test_math_vectors.py  test_model.py  test_solver_dynamics.py  test_solver_kinematics.py  test_springs_functions_drivers.py  test_statics_model.py
validation/: README.md
